--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TEdit</string>
-    <string name="version">v2.1.3</string>
+    <string name="version">v2.1.4</string>
     <string name="empty_dir">No Contents</string>
     <string name="save_filename">Untitled.txt</string>
     <string name="alert">Alert</string>
@@ -11,7 +11,7 @@
     <string name="missing_file">File does not exist!</string>
     <string name="error_delete">Unable to delete file!</string>
     <string name="error_writefile">Unable to save file!</string>
-    <string name="error_nowritepermission">Permission Denied!\n\nPlease enable storage permission by opening your Android Settings app and selecting Apps-->TEdit-->Permissions.</string>
+    <string name="error_nowritepermission">Permission Denied!\n\nPlease enable storage permission by opening your Android Settings app and selecting Apps&#8212;>TEdit&#8212;>Permissions.</string>
     <string name="error_permission_denied">Permission Denied</string>
     <string name="error_readfile">Unable to read file!</string>
     <string name="error_invalidname">Invalid filename!</string>
@@ -37,7 +37,7 @@
     <string name="tabs">Tabs</string>
     <string name="author">Developed by Adam T. Ryder</string>
     <string name="help_newdoc">Create a new document.</string>
-    <string name="help_parentdir">Move to the the parent directory.</string>
+    <string name="help_parentdir">Move to the parent directory.</string>
     <string name="help_newdir">Create a new directory.</string>
     <string name="help_tabs">View the list of currently open documents.</string>
     <string name="help_browseclose">Close the browser. If you have one or more open documents this will switch to the last open document otherwise, this will quit the TEdit application. Using the back button will perform the same action.</string>
