Additional Read Permission Checks
TEdit now performs some additional read permission checks and warns accordingly. Previously when attempting to open a file with TEdit through another application TEdit would check for read/write permission and prompt the user to grant permission should it not have already been granted. In the case where the user denied permission TEdit would exit. This behaviour has been changed, when the user denies permission in this case TEdit will still open and display the contents of the file and prompt the user for read/write permission again when attempting to save the document. Of course, should TEdit find that it cannot read the file it will still simply exit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="error_writefile">Unable to save file!</string>
     <string name="error_nowritepermission">Permission Denied!\n\nPlease enable storage permission by opening your Android Settings app and selecting Apps&#8212;>TEdit&#8212;>Permissions.</string>
     <string name="error_permission_denied">Permission Denied</string>
-    <string name="error_readfile">Unable to read file!</string>
+    <string name="error_readfile">TEdit was not able to open the file.</string>
     <string name="error_invalidname">Invalid filename!</string>
     <string name="error_direxists">Directory already exists.</string>
     <string name="delete">Delete</string>
@@ -30,7 +30,6 @@
     <string name="filesaved">File Saved</string>
     <string name="filedeleted">File Deleted</string>
     <string name="noopendocuments">No Open Documents</string>
-    <string name="error_fileassoc">TEdit was unable to open the file.</string>
     <string name="help">Help</string>
     <string name="browser">Browser</string>
     <string name="editor">Editor</string>
