Color Pallet Adjustments
Adjustments have been made to the color pallet for focused icons, alert dialogs and EditText elements so as to mirror the color pallet used in the icon created by David Mind.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="editor">Editor</string>
     <string name="tabs">Tabs</string>
     <string name="author">Developed by Adam T. Ryder</string>
+    <string name="icon_author">Icon Design by David Mind</string>
     <string name="help_newdoc">Create a new document.</string>
     <string name="help_parentdir">Move to the parent directory.</string>
     <string name="help_newdir">Create a new directory.</string>
