Browse Root and SDCard Contents
A new backend for dealing with the Android file system allowing TEdit to browse Root and SDCard contents in addition to public internal storage. Devices with no SDCard can still select between root and internal volumes. This feature is available on devices running Android 5.0 and up.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="match_case">Match Case</string>
     <string name="search">Search</string>
     <string name="replace">Replace</string>
+    <string name="internal">Internal</string>
+    <string name="root">Root</string>
     <string name="missing_dir">Directory does not exist!</string>
     <string name="missing_file">File does not exist!</string>
     <string name="error_delete">Unable to delete file!</string>
@@ -31,6 +33,13 @@
     <string name="error_dberror">Unable to access information in the database.</string>
     <string name="error_unmounted">External storage media is not mounted.</string>
     <string name="error_protectedpath">The desired folder is protected, TEdit will not be able to write to this file.</string>
+    <string name="error_nofilepath">The specified path does not exist.</string>
+    <string name="error_json">An error occurred attempting to parse the file path.</string>
+    <string name="error_nonewdir">TEdit was not able to create the new directory. You may not have permission to modify the contents of the current directory.</string>
+    <string name="error_newtextbody">The contents of the document could not be retrieved.</string>
+    <string name="error_nofilename">The filename could not be retrieved.</string>
+    <string name="error_androidfilerename">Unable to save file. The Android distribution renamed the file to an unknown existing filename.</string>
+    <string name="alert_androidrenamedfile">Android was not able to save the file under the requested name. The file was renamed to:</string>
     <string name="newdirectory">New Directory</string>
     <string name="newdirmessage">Directory name:</string>
     <string name="dircreated">Directory Created</string>
@@ -42,12 +51,16 @@
     <string name="browser">Browser</string>
     <string name="editor">Editor</string>
     <string name="tabs">Tabs</string>
+    <string name="launch_sdpicker_title">Select SDCard</string>
+    <string name="launch_sdpicker">If you wish to browse your SDCard you must grant TEdit permission to do so by selecting the root folder of your SDCard in the following file manager.</string>
+    <string name="volumePicker">Choose Volume</string>
     <string name="whatsnew">What\'s New</string>
     <string name="author">Developed by Adam T. Ryder</string>
     <string name="icon_author">Icon Design by David Mind</string>
     <string name="help_newdoc">Create a new document.</string>
     <string name="help_parentdir">Move to the parent directory.</string>
     <string name="help_newdir">Create a new directory.</string>
+    <string name="help_drives">Select a volume to browse. Root, internal or, if present, SDcard.</string>
     <string name="help_tabs">View the list of currently open documents.</string>
     <string name="help_browseclose">Use your device\'s back button to close the browser. If you have one or more open documents this will switch to the last open document otherwise, this will quit the TEdit application.</string>
     <string name="help_opendoc">Open a document.</string>
