--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="error">Error</string>
     <string name="confirm">Yes</string>
     <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
     <string name="okay">Okay</string>
     <string name="whole_word">Whole Word</string>
     <string name="match_case">Match Case</string>
@@ -78,4 +79,39 @@
     <string name="help_left">Select and scroll to the previous instance of the search phrase within the text document.</string>
     <string name="help_right">Select and scroll to the next instance of the search phrase within the text document.</string>
     <string name="help_back">Use your device\'s back button to exit search mode.</string>
+    <string name="label_global">Global:</string>
+    <string name="help_settings_global">Global settings will be applied, by default, to the entire application.</string>
+    <string name="label_system">System:</string>
+    <string name="help_settings_global_system">These settings apply to system menus, dialog windows, tab and directory browser views.</string>
+    <string name="label_startupdir">Startup Directory:</string>
+    <string name="help_settings_global_startupdir">The directory you wish TEdit to display upon start.</string>
+    <string name="label_typeface">Typeface:</string>
+    <string name="help_settings_typeface">A stylized text appearance.</string>
+    <string name="label_textdirection">Text Direction:</string>
+    <string name="help_settings_textdirection">The directionality of text for your language.</string>
+    <string name="label_editor">Editor:</string>
+    <string name="help_settings_editor">These settings will be applied, by default, to all text editor views. The settings here can be overridden for individual text documents via the Local settings menu available by swiping left to right from a text editor view.</string>
+    <string name="help_settings_wordwrap">Whether or not text in the editor should scroll horizontally.</string>
+    <string name="label_local">Local:</string>
+    <string name="help_settings_local">Local settings are applied only to the individual text document from which the Local settings menu was accessed. These settings will apply to that particular text document until it is closed. Select &quot;Use Global&quot; for any of the settings to revert that setting to the setting specified in the global options menu.</string>
+    <string name="settings_global">GLOBAL</string>
+    <string name="settings_local">LOCAL</string>
+    <string name="settings_system">System Settings</string>
+    <string name="settings_editor">Editor Settings</string>
+    <string name="settings_startupDir">Startup Directory:</string>
+    <string name="browse">Browse</string>
+    <string name="settings_typeface">Typeface:</string>
+    <string name="settings_textDir">Text Direction:</string>
+    <string name="LTR">Left to Right</string>
+    <string name="RTL">Right to Left</string>
+    <string name="wordwrap">Word Wrap</string>
+    <string name="label_wordwrap">Word Wrap:</string>
+    <string name="settings_local_button">Local Settings</string>
+    <string name="settings_global_button">Global Settings</string>
+    <string name="typefacePicker">Select Typeface</string>
+    <string name="directoryPicker">Select Directory</string>
+    <string name="changevolume">Change Volume</string>
+    <string name="useglobal">Use Global</string>
+    <string name="on">On</string>
+    <string name="off">Off</string>
 </resources>
