Added a dialog to confirm the user wishes to close a text file when attempting to close a file that has been changed, but not saved.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,8 @@
     <string name="dircreated">Directory Created</string>
     <string name="filesaved">File Saved</string>
     <string name="filedeleted">File Deleted</string>
+    <string name="confirmclose">Confirm Close</string>
+    <string name="confirmclose_message">This file has not been saved, are you sure you\'d like to close it?</string>
     <string name="noopendocuments">No Open Documents</string>
     <string name="items_replaced">Item(s) Replaced</string>
     <string name="help">Help</string>
