--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="help_left">Select and scroll to the previous instance of the search phrase within the text document.</string>
     <string name="help_right">Select and scroll to the next instance of the search phrase within the text document.</string>
     <string name="help_back">Use your device\'s back button to exit search mode.</string>
+    <string name="help_opensettings">A settings menu can be accessed by swiping to the right anywhere on the screen.</string>
     <string name="label_global">Global:</string>
     <string name="help_settings_global">Global settings will be applied, by default, to the entire application.</string>
     <string name="label_system">System:</string>
@@ -92,7 +93,7 @@
     <string name="label_textdirection">Text Direction:</string>
     <string name="help_settings_textdirection">The directionality of text for your language.</string>
     <string name="label_editor">Editor:</string>
-    <string name="help_settings_editor">These settings will be applied, by default, to all text editor views. The settings here can be overridden for individual text documents via the Local settings menu available by swiping left to right from a text editor view.</string>
+    <string name="help_settings_editor">These settings will be applied, by default, to all text editor views. The settings here can be overridden for individual text documents via the Local settings menu available by swiping to the right from a text editor view.</string>
     <string name="help_settings_wordwrap">Whether or not text in the editor should scroll horizontally.</string>
     <string name="label_local">Local:</string>
     <string name="help_settings_local">Local settings are applied only to the individual text document from which the Local settings menu was accessed. These settings will apply to that particular text document until it is closed. Select &quot;Use Global&quot; for any of the settings to revert that setting to the setting specified in the global options menu.</string>
