Update settings help files.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,7 @@
     <string name="help_settings_typeface">A stylized text appearance.</string>
     <string name="label_textdirection">Text Direction:</string>
     <string name="help_settings_textdirection">The directionality of text for your language.</string>
+    <string name="help_settings_aob">Select how TEdit reacts when the Android Back button/gesture is activated when viewing the file browser. Selecting Parent Directory will cause TEdit to move to the parent directory when the Back action is initiated. When viewing the Permitted Directories activating the Back action twice will close TEdit or move to one of the open text files if there are any. Selecting Close Browser TEdit will immediate close or move to one of the open text files when the back action is activated.</string>
     <string name="label_editor">Editor:</string>
     <string name="help_settings_editor">These settings will be applied, by default, to all text editor views. The settings here can be overridden for individual text documents via the Local settings menu available by swiping to the right from a text editor view.</string>
     <string name="help_settings_wordwrap">Whether or not text in the editor should scroll horizontally.</string>
